--- a/IIFYM_Tracker/src/main/res/layout/activity_add_food.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_add_food.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Activities.Main.AddQuickMealActivity">
+    tools:context=".Activities.Main.activityAddFood">
 
     <LinearLayout
         android:orientation="vertical"
