--- a/IIFYM_Tracker/src/main/res/layout/content_create_simple_meal.xml
+++ b/IIFYM_Tracker/src/main/res/layout/content_create_simple_meal.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Activities.Main.CreateSimpleMealActivity">
+    tools:context=".Activities.Main.activityCreateFood">
 
     <LinearLayout
         android:orientation="vertical"
