--- a/IIFYM_Tracker/src/main/res/layout/content_home.xml
+++ b/IIFYM_Tracker/src/main/res/layout/content_home.xml
@@ -5,26 +5,30 @@
     android:id="@+id/relativeLayoutBase"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.kareem.IIFYM_Tracker.Activities.Main.activityMain"
-    tools:showIn="@layout/activity_home">
+    tools:showIn="@layout/activity_home"
+    android:layout_marginBottom="@dimen/activity_vertical_margin"
+    android:layout_marginTop="@dimen/activity_vertical_margin"
+    android:layout_marginRight="@dimen/activity_horizontal_margin"
+    android:layout_marginLeft="@dimen/activity_horizontal_margin">
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        app:srcCompat="@drawable/icon_addnewmeal"
         android:id="@+id/floatingActionButton"
         android:baselineAlignBottom="false"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        app:elevation="0dp"
-        android:scaleType="center"
-        app:fabSize="normal" />
+        app:elevation="3dp"
+        android:scaleType="fitCenter"
+        app:fabSize="normal"
+        app:backgroundTint="@color/colorButtonBackground"
+        app:srcCompat="@drawable/btn_add"
+        app:borderWidth="5dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginBottom="5dp" />
 
     <LinearLayout
         android:id="@+id/linearlayoutBase"
