--- a/IIFYM_Tracker/src/main/res/values/colors.xml
+++ b/IIFYM_Tracker/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#1f3972</color>
     <color name="colorPrimaryDark">#192d5a</color>
     <color name="colorAccent">#1f3972</color>
+    <color name="colorButtonBackground">#afb9d2</color>
     <color name="blue_light">#2D9DC8</color>
     <color name="blue_dark">#314d61</color>
     <color name="white">#ffffff</color>
