--- a/IIFYM_Tracker/src/main/res/values/dimens.xml
+++ b/IIFYM_Tracker/src/main/res/values/dimens.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
@@ -8,4 +8,7 @@
     <dimen name="pie_chart_text2_size">16sp</dimen>
     <dimen name="radio_button_conner_radius">5dp</dimen>
     <dimen name="radio_button_stroke_border">1dp</dimen>
+
+    <dimen name="design_fab_size_mini" tools:override="true">60dp</dimen>
+    <dimen name="design_fab_image_size" tools:override="true">45dp</dimen>
 </resources>
