--- a/IIFYM_Tracker/src/main/res/layout/activity_view_saved_meals.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_view_saved_meals.xml
@@ -21,7 +21,6 @@
         android:clickable="true"
         app:srcCompat="@drawable/icon_adddailyitem"
         android:id="@+id/addmeal_fab"
-        app:backgroundTint="?attr/colorPrimaryDark"
         app:fabSize="mini"
         android:layout_width="75dp"
         app:elevation="10dp"
@@ -36,8 +35,8 @@
         android:layout_width="wrap_content"
         android:id="@+id/ListView_SavedMeals"
         android:layout_height="0dp"
-        tools:layout_editor_absoluteY="45dp"
-        tools:layout_editor_absoluteX="0dp"></ListView>
+        tools:layout_editor_absoluteX="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/EditText_MealSearch"></ListView>
 
 
 </android.support.constraint.ConstraintLayout>
